examples/greeter/deployment/tanzu/03_database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      
      containers:
        - image: mysql:8
          name: database
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          
      restartPolicy: Always
