examples/greeter/deployment/tanzu/04_database-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database
  name: database
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    app: database
