examples/greeter/deployment/tanzu/07_app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  ports:
    - name: "ajp"
      port: 8009
      targetPort: 8009
    - name: "http"
      port: 8080
      targetPort: 8080
    - name: "https"
      port: 8443
      targetPort: 8443
    - name: "mgmt"
      port: 9990
      targetPort: 9990
    - name: "mgmts"
      port: 9993
      targetPort: 9993
    - name: "txn-recovery-env"
      port: 4712
      targetPort: 4712
    - name: "txn-status-manager"
      port: 4713
      targetPort: 4713
  selector:
    app: app
